fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ section {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	align-items: center;
+	/*align-items: center;*/
 	flex-wrap: wrap;
 }
 section:after { content:''; display: table; }
